# UCI-ML-Repository

./: Dockerfile  README.md  dvc.yaml  mlflow.db  pyproject.toml
.dvc/tmp/: lock
adult_mlops_project/src/: validate.py
artifacts/: encoder.joblib  metrics_all_models.json  metrics_capital_logit.json  metrics_time_linear.json  metrics_work_binary.json  pipeline.joblib  scaler.joblib  validation_report.json
data/interim/: Xtrain.parquet  ytest.parquet
drive/MyDrive/adult_mlops_project/data/raw/: targets.parquet
mlruns/1/models/m-7217460781264c27a2b3cf7afb703ff0/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-b8338854a7a14049988ca27e7dbca693/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-d0c332fdaf944d999d5d8627d8926c49/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-fea5c982b1e641eda44db9a25ac368b4/artifacts/: MLmodel  model.pkl
models/: model_time_linear.pkl
notebooks/: 01_eda.ipynb
src/: clean.py  evaluate.py  features.py  ingest.py  validate.py
tests/: test_models.py
