[tool.poetry]
name = "adult-mlops-multimodel"
version = "0.2.0"
description = "Pipeline MLOps multimodelo para clasificacion Adult Income con modelos global y especializados"
authors = ["Jhonatancaon1234 <tu@email.com>, PaulBetancour <tu@email.com> y German Chamorro <germanchamorro98@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
scikit-learn = "^1.4"
mlflow = "^2.10"
pandera = {extras = ["pandas"], version = "^0.18"}
ucimlrepo = "^0.0.7"
pandas = "^2.0"
pyarrow = "^14.0"
joblib = "^1.3"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
